[tool.poetry]
name = "batch-download-utils"
version = "0.3.0"
description = "Script utils for managing batch download redis persistence"
authors = [
    "Maxime Vanza <mvanza@icij.org>",
    "Bruno Thomas <bthomas@icij.org>",
    "ICIJ <engineering@icij.org>",
]
readme = "README.md"
packages = [
    { include = "batch_download_utils" }
]
exclude = ["batch_download_utils/tests"]

[tool.poetry.scripts]
hmap-cleaner = "batch_download_utils.hmap_cleaner:main_async"
hmap-migrate = "batch_download_utils.migrate_tasks:main_async"
hmap-migrate_20_2_1 = "batch_download_utils.migrate_tasks_20_2_1:main_async"
db-migrate-bs-result-task = "batch_download_utils.migrate_batch_search_task_results_db:main_async"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.0.8"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
mysql = "^0.0.3"
aiomysql = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

